gcc/testsuite/rust/rustc/ui/error-codes/E0197.rs
struct Foo;

unsafe impl Foo { } // { dg-error ".E0197." "" { target *-*-* } }

fn main() {
}

